--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,8 @@
             android:name=".TodoDetailActivity"
             android:exported="true"
             android:label="@string/app_name"/>
+        <activity android:name=".SettingsActivity" />
+
     </application>
 
 </manifest>
